160 | Add new categories

--- a/backend/fixtures/prod/categories.yaml
+++ b/backend/fixtures/prod/categories.yaml
@@ -3230,3 +3230,11 @@
   fields:
     name: books
     keywords: книга
+- model: marketplace.category
+  fields:
+    name: boardgame
+    keywords: настольные игры
+- model: marketplace.category
+  fields:
+    name: pen
+    keywords: ручка, шариковая ручка, автоматическая ручка
