--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -24,7 +24,7 @@ elasticsearch-dsl = "==7.4.0"
 pytz = '==2021.3'
 sentry-sdk = "==1.5.5"
 scrapy-fake-useragent = "==1.4.4"
-drf-spectacular = "*"
+drf-spectacular = "==0.21.2"
 
 [dev-packages]
 pytest = "==7.0.1"
