161 | Add ram parser (#195)
* 161 | Add ram parser

* 161 | add keyword to unknown category

* 161 | change the name of test

--- a/backend/fixtures/prod/categories.yaml
+++ b/backend/fixtures/prod/categories.yaml
@@ -3238,3 +3238,7 @@
   fields:
     name: pen
     keywords: ручка, шариковая ручка, автоматическая ручка
+- model: marketplace.category
+  fields:
+    name: unknown
+    keywords: unknown
