--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -25,7 +25,7 @@ pytz = '==2021.3'
 sentry-sdk = "==1.5.5"
 scrapy-fake-useragent = "==1.4.4"
 drf-spectacular = "==0.21.2"
-fakeredis = "*"
+fakeredis = "==1.7.1"
 
 [dev-packages]
 pytest = "==7.0.1"
