--- a/deployment/helmfile/defaults.yaml
+++ b/deployment/helmfile/defaults.yaml
@@ -5,6 +5,8 @@ repositories:
   url: https://prometheus-community.github.io/helm-charts
 - name: bitnami
   url: https://charts.bitnami.com/bitnami
+- name: elastic
+  url: https://helm.elastic.co
 - name: jetstack
   url: https://charts.jetstack.io
 - name: zifter
