Tune deployment and frontend dependency

--- a/deployment/charts/cms/templates/deployment.yaml
+++ b/deployment/charts/cms/templates/deployment.yaml
@@ -50,6 +50,7 @@ spec:
 #              path: /health-check/
 #              port: http
           readinessProbe:
+            initialDelaySeconds: 5
             httpGet:
               path: /health-check/
               port: http
