--- a/deployment/charts/cms-lib/values.yaml
+++ b/deployment/charts/cms-lib/values.yaml
@@ -6,6 +6,10 @@ redis:
     host: "localhost"
     port: "6379"
     db: "0"
+  storage:
+    host: "localhost"
+    port: "6379"
+    db: "0"
 
 postgres:
   dbname: "byprice24"
