--- a/deployment/helmfile/11-app.yaml
+++ b/deployment/helmfile/11-app.yaml
@@ -7,6 +7,7 @@ releases:
   - name: cms
     namespace: {{ .Values.namespace }}
     chart: ../charts/cms
+    timeout: 180
     labels:
       side: "backend"
     values:
