--- a/backend/fixtures/test/marketplaces.yaml
+++ b/backend/fixtures/test/marketplaces.yaml
@@ -3,7 +3,7 @@
   fields:
     domain: www.21vek.by
     logo_url: https://www.21vek.by/img/up/logo_21vek.by.png
-- model: crawler.scrapingstate
+- model: crawler.crawlerstate
   pk: 1
   fields:
     marketplace: 1
@@ -13,7 +13,7 @@
   fields:
     domain: www.ilp.by
     logo_url: https://userimages.shopmanager.by/3100630/ilp-logo.png
-- model: crawler.scrapingstate
+- model: crawler.crawlerstate
   pk: 2
   fields:
     marketplace: 2
