--- a/backend/fixtures/prod/marketplaces.yaml
+++ b/backend/fixtures/prod/marketplaces.yaml
@@ -3,6 +3,7 @@
   fields:
     domain: www.21vek.by
     logo_url: https://www.21vek.by/img/up/logo_21vek.by.png
+    delivery: True
 - model: crawler.crawlerstate
   pk: 1
   fields:
@@ -14,6 +15,7 @@
   fields:
     domain: www.ilp.by
     logo_url: https://userimages.shopmanager.by/3100630/ilp-logo.png
+    delivery: True
 - model: crawler.crawlerstate
   pk: 2
   fields:
@@ -25,6 +27,7 @@
   fields:
     domain: www.amd.by
     logo_url: https://www.amd.by/image/catalog/img/logo1.png
+    delivery: True
 - model: crawler.crawlerstate
   pk: 3
   fields:
@@ -36,6 +39,7 @@
   fields:
     domain: www.funtastik.by
     logo_url: https://www.funtastik.by/bitrix/templates/funtastik5/images/logo.png
+    delivery: True
 - model: crawler.crawlerstate
   pk: 4
   fields:
@@ -47,6 +51,7 @@
   fields:
     domain: www.ozon.ru
     logo_url: https://cdn1.ozone.ru/s3/cms/05/t8f/wc200/doodle_1.pnggit
+    delivery: True
 - model: crawler.crawlerstate
   pk: 5
   fields:
@@ -58,6 +63,7 @@
   fields:
     domain: texus.by
     logo_url: https://texus.by/local/images/logo.png
+    delivery: True
 - model: crawler.crawlerstate
   pk: 6
   fields:
@@ -69,6 +75,7 @@
   fields:
     domain: goldapple.by
     logo_url: 	https://goldapple.by/static/version1640211628/frontend/Mygento/goldapple/ru_RU/images/app-logo.jpg
+    delivery: True
 - model: crawler.crawlerstate
   pk: 7
   fields:
@@ -80,6 +87,7 @@
   fields:
     domain: bukvaeshka.by
     logo_url: 	https://bukvaeshka.by/upload/CNext/9fe/%D0%9B%D0%9E%D0%93%D0%9E.jpg
+    delivery: True
 - model: crawler.crawlerstate
   pk: 8
   fields:
@@ -91,6 +99,7 @@
   fields:
     domain: ram.by
     logo_url: 	https://ram.by/images/logo.png
+    delivery: True
 - model: crawler.crawlerstate
   pk: 9
   fields:
