--- a/deployment/helmfile/10-infra-app.yaml
+++ b/deployment/helmfile/10-infra-app.yaml
@@ -77,6 +77,12 @@ releases:
   # ELASTICSEARCH
   - name: elasticsearch
     namespace: {{ .Values.namespace }}
+    chart: bitnami/elasticsearch
+    version: 17.5.4
+    installed: false
+
+  - name: elasticsearch-v2
+    namespace: {{ .Values.namespace }}
     chart: elastic/elasticsearch
     version: 7.17.1
     installed: {{ .Values.elasticsearch.enabled | toYaml }}
