Fixed kubernetes cluster to launch it in arm64 (#211)
* Fixed image build - support arm64

* Fix launch of elasticsearch on arm64, but cms doesn't la

* Fixed launching the project from arm64 infrastructure

* Fix deployment

Co-authored-by: zifter <zifter.ai@gmail.com>

--- a/deployment/helmfile/releases/elasticsearch/values.yaml
+++ b/deployment/helmfile/releases/elasticsearch/values.yaml
@@ -1,36 +1,18 @@
 architecture: standalone
-auth:
-  enabled: false
 
-cluster:
-  enabled: false
+serviceAccountName: elasticsearch
+serviceAccountCreate: true
 
-serviceAccount:
-  create: true
-  name: elasticsearch
+ES_JAVA_OPTS: "-Xms512m -Xmx768m"
 
-master:
-  resources:
-    limits:
-      memory: 768Mi
-    requests:
-      cpu: 150m
-      memory: 512Mi
+replicas: 1
 
-coordinating:
-  replicas: 1
-  resources:
-    limits:
-      memory: 768Mi
-    requests:
-      cpu: 50m
-      memory: 512Mi
+resources:
+  limits:
+    memory: 768Mi
+  requests:
+    cpu: 150m
+    memory: 512Mi
 
-data:
-  replicas: 1
-  resources:
-    limits:
-      memory: 2048Mi
-    requests:
-      cpu: 50m
-      memory: 2048Mi
+readinessProbe:
+  initialDelaySeconds: 30
