--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.27.1",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.5.2"
   }
 }
