--- a/deployment/helmfile/releases/redis/values.yaml
+++ b/deployment/helmfile/releases/redis/values.yaml
@@ -22,6 +22,7 @@ master:
       cpu: "100m"
       memory: "150Mi"
     limits:
+      cpu: "100m"
       memory: "150Mi"
 
 
@@ -34,4 +35,5 @@ replica:
       cpu: "100m"
       memory: "150Mi"
     limits:
+      cpu: "100m"
       memory: "150Mi"
