Fixed alerts of failedJobs

--- a/deployment/helmfile/releases/rq-exporter/values.yaml
+++ b/deployment/helmfile/releases/rq-exporter/values.yaml
@@ -9,3 +9,12 @@ resources:
 rq:
   - name: rq
     host: redis-master
+
+rules:
+  enabled: true
+  failedJobs:
+    enabled: true
+    threshold: 0
+    queues:
+      - crawler-result
+      - search-query
